[package]
name = "lego"
version = "0.1.0"
edition = "2021"

[dependencies]
cranelift = "0.115.0"
cranelift-codegen = "0.115.0"
cranelift-frontend = "0.115.0"
cranelift-jit = "0.115.0"
cranelift-module = "0.115.0"
cranelift-native = "0.115.0"

lego-macros = { path = "lego-macros" }

[workspace]
members = [
    "lego-macros",
]

[dev-dependencies]
paresse = { git = "https://github.com/MarinPostma/paresse.git" }
